Corrected styles in tech, to load every rows after slide by menu click. Corrected logic for fetching by language. Changed overflow scroll to auto.

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -23,14 +23,14 @@ header {
 
 @media (max-width: 651px) {
   header {
-    z-index: 99999999999999999999999999999999;
+    z-index: 1;
     position: fixed;
   }
 }
 
 @media (max-height: 401px) and (orientation: landscape){
   header {
-    z-index: 99999999999999999999999999999999;
+    z-index: 1;
     position: fixed;
   }
 }
