--- a/src/components/Sections/Tech/Tech.scss
+++ b/src/components/Sections/Tech/Tech.scss
@@ -8,7 +8,7 @@
 
   .tech-title {
     height: $height-title;
-    margin: 40px 0 0 0;
+    padding: 20px 0 0 0;
     display: flex;
     justify-content: center;
     align-items: center;
